...
        android:id="@+id/LoginBTN"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="LOGIN"
        app:layout_constraintBottom_toTopOf="@+id/RegisterBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/RegisterBTN"
...
